// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit Test: InfoTooltip  should render properly:  should render properly with component 1`] = `
<div
  className="mock-a10-tooltip"
>
  <div>
    Test component
  </div>
  <div
    className="dirtyList"
  >
    <ul
      className="description"
    >
      <li>
        <div>
          Test value1
        </div>
      </li>
      <li>
        <div>
          Test value2
        </div>
      </li>
      <li>
        <div>
          Test value3
        </div>
      </li>
      <div
        className="action"
      >
        Test action
      </div>
    </ul>
  </div>
</div>
`;

exports[`Unit Test: InfoTooltip  should render properly:  should render properly with default props 1`] = `
<div
  className="mock-a10-tooltip"
>
  <a>
    3
  </a>
  <div
    className="dirtyList"
  >
    <ul
      className="description"
    >
      <li>
         
      </li>
      <li>
         
      </li>
      <li>
         
      </li>
    </ul>
  </div>
</div>
`;

exports[`Unit Test: InfoTooltip  should render properly:  should render properly with empty props 1`] = `"0"`;

exports[`Unit Test: InfoTooltip  should render properly:  should render properly with text 1`] = `
<div
  className="mock-a10-tooltip"
>
  <a>
    Test text
  </a>
  <div
    className="dirtyList"
  >
    <ul
      className="description"
    >
      <li>
        <div>
          Test value1
        </div>
      </li>
      <li>
        <div>
          Test value2
        </div>
      </li>
      <li>
        <div>
          Test value3
        </div>
      </li>
      <div
        className="action"
      >
        Test action
      </div>
    </ul>
  </div>
</div>
`;
